# rsync-gui

./: LEES.ME  LICENSE  README.md
c++/: CMakeLists.txt  RemotePull.pro  argumenthandler.cpp  argumenthandler.h  main.cpp  mainwindow.cpp  mainwindow.h  progressdialog.cpp  progressdialog.h  rsynccore.cpp  rsynccore.h
